# cw32f030-hal

./: CW32F030.svd  Cargo.toml  README.md  device.x
src/: adc.rs  atim.rs  awt.rs  btim1.rs  crc.rs  dma.rs  dmachannel1.rs  flash.rs  gpioa.rs  gpioc.rs  gpiof.rs  gtim1.rs  i2c1.rs  iwdt.rs  lib.rs  lvd.rs  ram.rs  rtc.rs  spi1.rs  sysctrl.rs  uart1.rs  vc1.rs  wwdt.rs
src/adc/: cr0.rs  cr1.rs  cr2.rs  enable14.rs  icr.rs  ier.rs  isr.rs  result0.rs  result1.rs  result140.rs  result141.rs  result142.rs  result143.rs  result2.rs  result3.rs  resultacc.rs  sqr.rs  start.rs  trigger.rs  vth.rs  vtl.rs
src/atim/: arr.rs  ch1ccra.rs  ch1ccrb.rs  ch1cr.rs  ch2ccra.rs  ch2ccrb.rs  ch2cr.rs  ch3ccra.rs  ch3ccrb.rs  ch3cr.rs  ch4ccr.rs  ch4cr.rs  cnt.rs  cr.rs  dtr.rs  fltr.rs  icr.rs  isr.rs  mscr.rs  rcr.rs  trig.rs
src/awt/: arr.rs  cnt.rs  cr.rs  icr.rs  ier.rs  isr.rs
src/btim1/: acr.rs  arr.rs  bcr.rs  cnt.rs  dma.rs  icr.rs  ier.rs  isr.rs
src/crc/: cr.rs  dr16.rs  dr32.rs  dr8.rs  result16.rs  result32.rs
src/dma/: cnt1.rs  cnt2.rs  cnt3.rs  cnt4.rs  cnt5.rs  csr1.rs  csr2.rs  csr3.rs  csr4.rs  csr5.rs  dstaddr1.rs  dstaddr2.rs  dstaddr3.rs  dstaddr4.rs  dstaddr5.rs  icr.rs  isr.rs  srcaddr1.rs  srcaddr2.rs  srcaddr3.rs  srcaddr4.rs  srcaddr5.rs  trig1.rs  trig2.rs  trig3.rs  trig4.rs  trig5.rs
src/dmachannel1/: cnt.rs  csr.rs  dstaddr.rs  srcaddr.rs  trig.rs
src/flash/: cr1.rs  cr2.rs  icr.rs  ier.rs  isr.rs  pagelock.rs
src/gpioa/: afrh.rs  afrl.rs  analog.rs  brr.rs  bsrr.rs  dir.rs  driver.rs  fallie.rs  filter.rs  highie.rs  icr.rs  idr.rs  isr.rs  (+10 more)
(+436 files in other folders)
